--- a/src/shared/makefile-tools.arch
+++ b/src/shared/makefile-tools.arch
@@ -15,15 +15,68 @@
 ##
 ## ------------------------------------------------------------------------- ##
 
-# legacy option name build->arch
-ifdef build
-arch=$(build)
+## EIC @ ERI,U-TOKYO (2020 System)
+ifeq ($(arch),eic)
+  FC      = module purge; module load intel mpt lib/NetCDF lib/HDF5; ifort
+  FFLAGS  = -xCORE-AVX512 -O3 -D_INFO -fpp
+  NCFLAG  = -D_NETCDF
+  NCLIB   = 
+  NCINC   = 
+  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
 endif
 
-##
-## Mac OSX + Intel Compiler + OpenMPI
-##
 
+## Ubuntu with gfortran
+ifeq ($(arch),ubuntu-gfortran)
+
+  FC      = gfortran
+  FFLAGS  = -O2 -ffast-math -D_INFO -cpp
+  NCFLAG  = -D_NETCDF
+  NCLIB   = -L/usr/lib/x86_64-linux-gnu
+  NCINC   = -I/usr/include
+  NETCDF  = -lnetcdff -lnetcdf
+
+  ifeq ($(debug),true)
+    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
+	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
+	          -D_INFO -D_DEBUG 
+  endif
+
+endif
+
+## Wisteria/BDEC-01
+ifeq ($(arch),bdec-o)
+  FC      = module purge; module load intel netcdf netcdf-fortran hdf5; ifort
+  FFLAGS  = -D_INFO -D_ASSERT -O2 -xHOST -warn all -heap-arrays -fpp
+  NCFLAG  = -D_NETCDF
+  NCLIB =
+  NCINC =
+  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5
+endif
+
+## Apple Silicon macOS gfortran and netcdf provided by homebrew
+ifeq ($(arch),mac-m1)
+
+  FC      = gfortran
+  FFLAGS  = -O2 -ffast-math -D_INFO 
+  NCFLAG  = -D_NETCDF
+  NCLIB   = -L/opt/homebrew/lib
+  NCINC   = -I/opt/homebrew/include
+  NETCDF  = -lnetcdf -lnetcdff
+
+  ifeq ($(debug),true)
+    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
+	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
+	          -D_INFO -D_DEBUG 
+  endif
+endif
+
+
+### 
+### Obsolete systems
+###
+
+## Mac OSX + Intel Compiler + OpenMPI (obsolete)
 ifeq ($(arch),mac-intel)
 
   FC      = ifort
@@ -42,9 +95,7 @@ ifeq ($(arch),mac-intel)
 
 endif
 
-##
-## Mac OSX gfortran and netcdf provided by homebrew
-##
+## Intel Mac OSX gfortran and netcdf provided by homebrew (obsolete)
 ifeq ($(arch),mac-gfortran)
   LOCAL   = /usr/local
   FC      = gfortran
@@ -62,21 +113,7 @@ ifeq ($(arch),mac-gfortran)
 
 endif
 
-##
-## EIC @ ERI,U-TOKYO (2020 System)
-##
-ifeq ($(arch),eic)
-  FC      = module purge; module load intel mpt lib/NetCDF lib/HDF5; ifort
-  FFLAGS  = -xCORE-AVX512 -O3  -D_INFO 
-  NCFLAG  = -D_NETCDF
-  NCLIB   = 
-  NCINC   = 
-  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
-endif
-
-##
-## Fujitsu FX10, FX100 & K-computer (maybe obsolete)
-##
+## Fujitsu FX10, FX100 & K-computer (obsolete)
 ifeq ($(arch),fx)
   FC      = gfortran
   FFLAGS  = -O3 
@@ -86,9 +123,7 @@ ifeq ($(arch),fx)
   NETCDF  = -lnetcdf
 endif
 
-##
 ## Earth Simulator 3 (obsolete)
-##
 ifeq ($(arch),es3)
   FC      = ifort
   FFLAGS  = -O3 -xHOST \
@@ -100,10 +135,7 @@ ifeq ($(arch),es3)
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
 endif
 
-
-##
-## Earth Simulator 4
-##
+## Earth Simulator 4 (obsolete)
 ifeq ($(arch),es4)
   FC      = module purge; module load NetCDF4/all; gfortran
   FFLAGS  = -O2 -ffast-math -D_INFO 
@@ -113,29 +145,7 @@ ifeq ($(arch),es4)
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
 endif
 
-##
-## Ubuntu with Gfortran
-##
-ifeq ($(arch),ubuntu-gfortran)
-
-  FC      = gfortran
-  FFLAGS  = -O2 -ffast-math -D_INFO 
-  NCFLAG  = -D_NETCDF
-  NCLIB   = -L/usr/lib/x86_64-linux-gnu
-  NCINC   = -I/usr/include
-  NETCDF  = -lnetcdff -lnetcdf
-
-  ifeq ($(debug),true)
-    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
-	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
-	          -D_INFO -D_DEBUG 
-  endif
-
-endif
-
-##
-## Oakforest-PACS
-##
+## Oakforest-PACS (obsolete)
 ifeq ($(arch),oak)
   FC      = module load netcdf netcdf-fortran hdf5; ifort
   FFLAGS  =  -D_INFO -D_ASSERT -O2 -xHOST \
@@ -156,10 +166,7 @@ ifeq ($(arch),ofp)
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5
 endif
 
-
-##
-## Oakbridge-CX
-##
+## Oakbridge-CX (obsolete)
 ifeq ($(arch),obcx)
   FC      = module load netcdf netcdf-fortran hdf5; ifort
   FFLAGS  =  -D_INFO -D_ASSERT -O2 -xHOST \
@@ -168,37 +175,4 @@ ifeq ($(arch),obcx)
   NCLIB =
   NCINC =
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5
-endif
-
-##
-## BDEC
-##
-ifeq ($(arch),bdec-o)
-  FC      = module purge; module load intel netcdf netcdf-fortran hdf5; ifort
-  FFLAGS  =  -D_INFO -D_ASSERT -O2 -xHOST -warn all -heap-arrays 
-  NCFLAG  = -D_NETCDF
-  NCLIB =
-  NCINC =
-  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5
-endif
-
-
-##
-## Mac OSX gfortran and netcdf provided by homebrew
-##
-ifeq ($(arch),mac-m1)
-
-  FC      = gfortran
-  FFLAGS  = -O2 -ffast-math -D_INFO 
-  NCFLAG  = -D_NETCDF
-  NCLIB   = -L/opt/homebrew/lib
-  NCINC   = -I/opt/homebrew/include
-  NETCDF  = -lnetcdf -lnetcdff
-
-  ifeq ($(debug),true)
-    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
-	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
-	          -D_INFO -D_DEBUG 
-  endif
-
 endif
