--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -15,15 +15,94 @@
 ##
 ## ------------------------------------------------------------------------- ##
 
-# legacy option name build->arch
+## legacy option name build->arch
 ifdef build
 arch=$(build)
 endif
 
-##
-## Mac OSX + Intel Compiler + OpenMPI
-##
 
+## Ubuntu with Gfortran
+ifeq ($(arch),ubuntu-gfortran)
+  
+  FC      = mpif90
+  FFLAGS  = -O2 -ffast-math -fopenmp -cpp
+  NCFLAG  = -D_NETCDF
+  NCLIB   = -L/usr/lib/x86_64-linux-gnu
+  NCINC   = -I/usr/include
+  NETCDF  = -lnetcdff -lnetcdf
+
+  ifeq ($(debug),true)
+    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
+	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
+	          -D_DEBUG 
+  endif
+
+endif
+
+
+## Wisteria/BDEC-01 Odyssey at the University of Tokyo
+ifeq ($(arch),bdec-o)
+  FC      = module purge; module load fj fjmpi netcdf hdf5 netcdf-fortran; mpifrtpx
+  FFLAGS  = -O3 -Keval -Kfp_contract -Kfp_relaxed -Kfz -Kilfunc -Kmfunc -Komitfp -Kopenmp -Kparallel -Ksimd=2 -Kocl -Kassume=memory_bandwidth -Koptmsg=guide -Nlst=t -D_FX -Cpp
+  NCFLAG  = -D_NETCDF 
+  NCLIB = 
+  NCINC = 
+  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 
+endif
+
+
+## gfortran, netcdf for M1 Mac (with homebrew)
+ifeq ($(arch),mac-m1)
+
+  FC      = mpif90
+  FFLAGS  = -O2 -ffast-math -fopenmp -cpp
+  NCFLAG  = -D_NETCDF
+  NCLIB   = -L/opt/homebrew/lib
+  NCINC   = -I/opt/homebrew/include
+  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
+
+  ifeq ($(debug),true)
+    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
+	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
+	           -D_DEBUG 
+  endif
+
+endif
+
+###
+### Obsolete systems
+###
+
+## Earth Simulator 3 (Use fortran 90 compiler for better speed) (obsolete)
+ifeq ($(arch),es3)
+  FC      = sxmpif90
+  FFLAGS  = -R2 -pi nest=5 -Wf"-pvctl fullmsg" -D_ES -f2003   -Popenmp
+  NCFLAG  = -D_NETCDF
+  NCLIB   = -L/SX/usr/local/netcdf-4.1.3/lib
+  NCINC   = -I/SX/usr/local/netcdf-4.1.3/include
+  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz -size_t64
+
+  ifeq ($(debug),true)
+	FFLAGS = -eR -pi nest=5 -Wf"-pvctl fullmsg -init stack=nan heap=nan" -D_ES -f2003   -Popenmp
+  endif
+
+endif
+
+## Earth Simulator 4 (JAMSTEC, Japan; obsolete)
+ifeq ($(arch),es4)
+  FC      = module purge; module load NECSDK/all NetCDF4_ve/all; mpinfort
+  FFLAGS  =   -fopenmp -O3 -finline-functions -floop-unroll -fpp -report-format -D_ES
+  NCFLAG  = -D_NETCDF
+  NCLIB   =  -L /opt/nec/ve/lib/
+  NCINC   = -I /opt/share/NetCDF4_ve/netcdf-fortran/4.5.2/include/
+  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lsz -lz 
+
+  ifeq ($(debug),true)
+    FFLAGS = -fbounds-check -O0  -fopenmp  
+  endif
+endif
+
+## Mac OSX (intel) + Intel Compiler + OpenMPI (obsolete)
 ifeq ($(arch),mac-intel)
 
   FC      = mpif90
@@ -40,10 +119,7 @@ ifeq ($(arch),mac-intel)
 
 endif
 
-##
-## gfortran, netcdf4 for Mac (with homebrew)
-##
-
+## gfortran, netcdf4 for Mac (with homebrew) (obsolete)
 ifeq ($(arch),mac-gfortran)
   LOCAL  = /usr/local
   FC      = mpif90
@@ -61,14 +137,10 @@ ifeq ($(arch),mac-gfortran)
 
 endif
 
-
-
-##
 ## EIC @ ERI,U-TOKYO (2020 System)
-##
 ifeq ($(arch),eic)
   FC      = module purge; module load intel mpt lib/NetCDF lib/HDF5; ifort
-  FFLAGS  = -xCORE-AVX512 -O3   -qopenmp -lmpi
+  FFLAGS  = -xCORE-AVX512 -O3 -qopenmp -lmpi -fpp
   NCFLAG  = -D_NETCDF
   NCLIB   = 
   NCINC   = 
@@ -76,9 +148,7 @@ ifeq ($(arch),eic)
 endif
 
 
-##
 ## Fujitsu FX10, FX100 (obsolete)
-##
 ifeq ($(arch),fx)
   FC      = mpifrtpx
   FFLAGS  = -O3 -Kfast -Kopenmp,parallel -Kstriping -Kprefetch_infer -Ksimd=2 -Kocl -D_FX  -Qt
@@ -89,63 +159,7 @@ ifeq ($(arch),fx)
 endif
 
 
-##
-## Earth Simulator 3 (Use fortran 90 compiler for better speed) (obsolete)
-##
-ifeq ($(arch),es3)
-  FC      = sxmpif90
-  FFLAGS  = -R2 -pi nest=5 -Wf"-pvctl fullmsg" -D_ES -f2003   -Popenmp
-  NCFLAG  = -D_NETCDF
-  NCLIB   = -L/SX/usr/local/netcdf-4.1.3/lib
-  NCINC   = -I/SX/usr/local/netcdf-4.1.3/include
-  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz -size_t64
-
-  ifeq ($(debug),true)
-	FFLAGS = -eR -pi nest=5 -Wf"-pvctl fullmsg -init stack=nan heap=nan" -D_ES -f2003   -Popenmp
-  endif
-
-endif
-
-##
-## Earth Simulator 4 (JAMSTEC, Japan)
-##
-ifeq ($(arch),es4)
-  FC      = module purge; module load NECSDK/all NetCDF4_ve/all; mpinfort
-  FFLAGS  =   -fopenmp -O3 -finline-functions -floop-unroll -fpp -report-format -D_ES
-  NCFLAG  = -D_NETCDF
-  NCLIB   =  -L /opt/nec/ve/lib/
-  NCINC   = -I /opt/share/NetCDF4_ve/netcdf-fortran/4.5.2/include/
-  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lsz -lz 
-
-  ifeq ($(debug),true)
-    FFLAGS = -fbounds-check -O0  -fopenmp  
-  endif
-endif
-
-##
-## Ubuntu with Gfortran
-##
-ifeq ($(arch),ubuntu-gfortran)
-  
-  FC      = mpif90
-  FFLAGS  = -O2 -ffast-math -fopenmp -cpp
-  NCFLAG  = -D_NETCDF
-  NCLIB   = -L/usr/lib/x86_64-linux-gnu
-  NCINC   = -I/usr/include
-  NETCDF  = -lnetcdff -lnetcdf
-
-  ifeq ($(debug),true)
-    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
-	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
-	           -D_DEBUG 
-  endif
-
-endif
-
-
-##
-## Oakforest-PACS at the University of Tokyo
-##
+## Oakforest-PACS at the University of Tokyo (obsolete)
 ifeq ($(arch),oak)
   FC      = module load netcdf hdf5 netcdf-fortran; mpiifort
   FFLAGS  = -axMIC-AVX512 -qopenmp  -static-intel -static_mpi -O3 -ipo -align array64byte -qopt-streaming-stores=auto
@@ -165,9 +179,7 @@ ifeq ($(arch),ofp)
 endif
 
 
-##
-## Oakbridge-CX at the University of Tokyo
-##
+## Oakbridge-CX at the University of Tokyo (obsolete)
 ifeq ($(arch),obcx)
   FC      = module load netcdf hdf5 netcdf-fortran; mpiifort
   FFLAGS  = -axCORE-AVX512 -qopenmp  -static-intel -static_mpi -O3 -ipo 
@@ -175,39 +187,4 @@ ifeq ($(arch),obcx)
   NCLIB = 
   NCINC = 
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 
-endif
-
-
-##
-## BDEC/Wisteria-Odyssey at the University of Tokyo
-##
-ifeq ($(arch),bdec-o)
-  FC      = module purge; module load fj fjmpi netcdf hdf5 netcdf-fortran; mpifrtpx
-  FFLAGS  = -O3 -Keval -Kfp_contract -Kfp_relaxed -Kfz -Kilfunc -Kmfunc -Komitfp -Kopenmp -Kparallel -Ksimd=2 -Kocl -Kassume=memory_bandwidth -Koptmsg=guide -Nlst=t -D_FX -Cpp
-  NCFLAG  = -D_NETCDF 
-  NCLIB = 
-  NCINC = 
-  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 
-endif
-
-
-##
-## gfortran, netcdf for M1 Mac (with homebrew)
-##
-
-ifeq ($(arch),mac-m1)
-
-  FC      = mpif90
-  FFLAGS  = -O2 -ffast-math -fopenmp -cpp
-  NCFLAG  = -D_NETCDF
-  NCLIB   = -L/opt/homebrew/lib
-  NCINC   = -I/opt/homebrew/include
-  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
-
-  ifeq ($(debug),true)
-    FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
-	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
-	           -D_DEBUG 
-  endif
-
 endif
