All ifdef preprocessor commands removed

--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -7,7 +7,7 @@
 ## This file defines the following variables for makefile
 ## FC (compiler)
 ## FFLAGS (compiler flag)
-## NCFLAG, NCLIB, NCINC  (netcdf library)
+## NCLIB, NCINC  (netcdf library)
 ##
 ## @copyright
 ##   Copyright 2013-2024 Takuto Maeda. All rights reserved.
@@ -26,7 +26,6 @@ ifeq ($(arch),ubuntu-gfortran)
   
   FC      = mpif90
   FFLAGS  = -O2 -ffast-math -fopenmp -cpp
-  NCFLAG  = -D_NETCDF
   NCLIB   = -L/usr/lib/x86_64-linux-gnu
   NCINC   = -I/usr/include
   NETCDF  = -lnetcdff -lnetcdf
@@ -44,7 +43,6 @@ endif
 ifeq ($(arch),bdec-o)
   FC      = module purge; module load fj fjmpi netcdf netcdf-fortran; mpifrtpx
   FFLAGS  = -O3 -Keval -Kfp_contract -Kfp_relaxed -Kfz -Kilfunc -Kmfunc -Komitfp -Kopenmp -Kparallel -Ksimd=2 -Kocl -Kassume=memory_bandwidth -Koptmsg=guide -Nlst=t -D_FX -Cpp
-  NCFLAG  = -D_NETCDF 
   NCLIB = 
   NCINC = 
   NETCDF  = -lnetcdff -lnetcdf
@@ -56,7 +54,6 @@ ifeq ($(arch),mac-m1)
 
   FC      = mpif90
   FFLAGS  = -O2 -ffast-math -fopenmp -cpp
-  NCFLAG  = -D_NETCDF
   NCLIB   = -L/opt/homebrew/lib
   NCINC   = -I/opt/homebrew/include
   NETCDF  = -lnetcdff -lnetcdf
@@ -77,7 +74,6 @@ endif
 ifeq ($(arch),es3)
   FC      = sxmpif90
   FFLAGS  = -R2 -pi nest=5 -Wf"-pvctl fullmsg" -D_ES -f2003   -Popenmp
-  NCFLAG  = -D_NETCDF
   NCLIB   = -L/SX/usr/local/netcdf-4.1.3/lib
   NCINC   = -I/SX/usr/local/netcdf-4.1.3/include
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz -size_t64
@@ -92,7 +88,6 @@ endif
 ifeq ($(arch),es4)
   FC      = module purge; module load NECSDK/all NetCDF4_ve/all; mpinfort
   FFLAGS  =   -fopenmp -O3 -finline-functions -floop-unroll -fpp -report-format -D_ES
-  NCFLAG  = -D_NETCDF
   NCLIB   =  -L /opt/nec/ve/lib/
   NCINC   = -I /opt/share/NetCDF4_ve/netcdf-fortran/4.5.2/include/
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lsz -lz 
@@ -107,7 +102,6 @@ ifeq ($(arch),mac-intel)
 
   FC      = mpif90
   FFLAGS  = -O3 -xHOST -warn all 
-  NCFLAG  = -D_NETCDF
   NCLIB   = -L$(HOME)/local/lib
   NCINC   = -I$(HOME)/local/include
   NETCDF  = -lnetcdf
@@ -124,7 +118,6 @@ ifeq ($(arch),mac-gfortran)
   LOCAL  = /usr/local
   FC      = mpif90
   FFLAGS  = -O2 -ffast-math   -fopenmp
-  NCFLAG  = -D_NETCDF
   NCLIB   = -L$(LOCAL)/lib
   NCINC   = -I$(LOCAL)/include
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
@@ -141,7 +134,6 @@ endif
 ifeq ($(arch),eic)
   FC      = module purge; module load intel mpt lib/NetCDF; ifort
   FFLAGS  = -xCORE-AVX512 -O3 -qopenmp -lmpi -fpp
-  NCFLAG  = -D_NETCDF
   NCLIB   = 
   NCINC   = 
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
@@ -152,7 +144,6 @@ endif
 ifeq ($(arch),fx)
   FC      = mpifrtpx
   FFLAGS  = -O3 -Kfast -Kopenmp,parallel -Kstriping -Kprefetch_infer -Ksimd=2 -Kocl -D_FX  -Qt
-  NCFLAG  = -D_NETCDF
   NCLIB   = -L$(HOME)/xlocal/lib
   NCINC   = -I$(HOME)/xlocal/include
   NETCDF  = -lnetcdf
@@ -163,7 +154,6 @@ endif
 ifeq ($(arch),oak)
   FC      = module load netcdf hdf5 netcdf-fortran; mpiifort
   FFLAGS  = -axMIC-AVX512 -qopenmp  -static-intel -static_mpi -O3 -ipo -align array64byte -qopt-streaming-stores=auto
-  NCFLAG  = -D_NETCDF 
   NCLIB = 
   NCINC = 
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 
@@ -172,7 +162,6 @@ endif
 ifeq ($(arch),ofp)
   FC      = module load netcdf hdf5 netcdf-fortran; mpiifort
   FFLAGS  = -axMIC-AVX512 -qopenmp  -static-intel -static_mpi -O3 -ipo -align array64byte -qopt-streaming-stores=auto
-  NCFLAG  = -D_NETCDF 
   NCLIB = 
   NCINC = 
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 
@@ -183,7 +172,6 @@ endif
 ifeq ($(arch),obcx)
   FC      = module load netcdf hdf5 netcdf-fortran; mpiifort
   FFLAGS  = -axCORE-AVX512 -qopenmp  -static-intel -static_mpi -O3 -ipo 
-  NCFLAG  = -D_NETCDF 
   NCLIB = 
   NCINC = 
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 
