--- a/src/shared/makefile-tools.arch
+++ b/src/shared/makefile-tools.arch
@@ -7,7 +7,7 @@
 ## This file defines the following variables for makefile
 ## FC (compiler)
 ## FFLAGS (compiler flag)
-## NCFLAG, NCLIB, NCINC  (netcdf library)
+## NCLIB, NCINC  (netcdf library)
 ##
 ## @copyright
 ##   Copyright 2013-2024 Takuto Maeda. All rights reserved.
@@ -19,7 +19,6 @@
 ifeq ($(arch),eic)
   FC      = module purge; module load intel mpt lib/NetCDF; ifort
   FFLAGS  = -xCORE-AVX512 -O3 -D_INFO -fpp
-  NCFLAG  = -D_NETCDF
   NCLIB   = 
   NCINC   = 
   NETCDF  = -lnetcdff -lnetcdf
@@ -31,7 +30,6 @@ ifeq ($(arch),ubuntu-gfortran)
 
   FC      = gfortran
   FFLAGS  = -O2 -ffast-math -D_INFO -cpp
-  NCFLAG  = -D_NETCDF
   NCLIB   = -L/usr/lib/x86_64-linux-gnu
   NCINC   = -I/usr/include
   NETCDF  = -lnetcdff -lnetcdf
@@ -48,7 +46,6 @@ endif
 ifeq ($(arch),bdec-o)
   FC      = module purge; module load intel netcdf netcdf-fortran; ifort
   FFLAGS  = -D_INFO -D_ASSERT -O2 -xHOST -warn all -heap-arrays -fpp
-  NCFLAG  = -D_NETCDF
   NCLIB =
   NCINC =
   NETCDF  = -lnetcdff -lnetcdf
@@ -59,7 +56,6 @@ ifeq ($(arch),mac-m1)
 
   FC      = gfortran
   FFLAGS  = -O2 -ffast-math -D_INFO -cpp
-  NCFLAG  = -D_NETCDF
   NCLIB   = -L/opt/homebrew/lib
   NCINC   = -I/opt/homebrew/include
   NETCDF  = -lnetcdf -lnetcdff
@@ -83,7 +79,6 @@ ifeq ($(arch),mac-intel)
   FFLAGS  = -O3 -xHOST \
             -warn all -heap-arrays -static-intel  \
 		    -D_INFO
-  NCFLAG  = -D_NETCDF
   NCLIB   = -L$(HOME)/local/lib
   NCINC   = -I$(HOME)/local/include
   NETCDF  = -lnetcdf
@@ -100,7 +95,6 @@ ifeq ($(arch),mac-gfortran)
   LOCAL   = /usr/local
   FC      = gfortran
   FFLAGS  = -O2 -ffast-math -D_INFO 
-  NCFLAG  = -D_NETCDF
   NCLIB   = -L$(LOCAL)/lib
   NCINC   = -I$(LOCAL)/include
   NETCDF  = -lnetcdf -lnetcdff
@@ -117,7 +111,6 @@ endif
 ifeq ($(arch),fx)
   FC      = gfortran
   FFLAGS  = -O3 
-  NCFLAG  = -D_NETCDF
   NCLIB   = -L$(HOME)/local/lib
   NCINC   = -I$(HOME)/local/include
   NETCDF  = -lnetcdf
@@ -129,7 +122,6 @@ ifeq ($(arch),es3)
   FFLAGS  = -O3 -xHOST \
 	    -warn all -heap-arrays -static-intel  \
 	    -D_INFO 
-  NCFLAG  = -D_NETCDF
   NCLIB   = -L/usr/local/lib
   NCINC   = -I/usr/local/include
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
@@ -139,7 +131,6 @@ endif
 ifeq ($(arch),es4)
   FC      = module purge; module load NetCDF4/all; gfortran
   FFLAGS  = -O2 -ffast-math -D_INFO 
-  NCFLAG  = -D_NETCDF
   NCLIB   = 
   NCINC   = -I /opt/share/NetCDF4/netcdf-fortran/4.5.2/include/
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
@@ -150,7 +141,6 @@ ifeq ($(arch),oak)
   FC      = module load netcdf netcdf-fortran hdf5; ifort
   FFLAGS  =  -D_INFO -D_ASSERT -O2 -xHOST \
              -warn all -heap-arrays 
-  NCFLAG  = -D_NETCDF
   NCLIB =
   NCINC =
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5
@@ -160,7 +150,6 @@ ifeq ($(arch),ofp)
   FC      = module load netcdf netcdf-fortran hdf5; ifort
   FFLAGS  =  -D_INFO -D_ASSERT -O2 -xHOST \
              -warn all -heap-arrays 
-  NCFLAG  = -D_NETCDF
   NCLIB =
   NCINC =
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5
@@ -171,7 +160,6 @@ ifeq ($(arch),obcx)
   FC      = module load netcdf netcdf-fortran hdf5; ifort
   FFLAGS  =  -D_INFO -D_ASSERT -O2 -xHOST \
              -warn all -heap-arrays 
-  NCFLAG  = -D_NETCDF
   NCLIB =
   NCINC =
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5
