--- a/src/shared/makefile-tools.arch
+++ b/src/shared/makefile-tools.arch
@@ -34,11 +34,11 @@ endif
 
 ## Wisteria/BDEC-01
 ifeq ($(arch),bdec-o)
-  FC      = module purge; module load intel netcdf netcdf-fortran; ifort
+  FC      = module purge; module load intel netcdf netcdf-fortran hdf5; ifort
   FFLAGS  = -D_INFO -D_ASSERT -O2 -xHOST -warn all -heap-arrays -fpp
   NCLIB =
   NCINC =
-  NETCDF  = -lnetcdff -lnetcdf
+  NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz 
 endif
 
 ## Apple Silicon macOS gfortran and netcdf provided by homebrew
@@ -48,7 +48,7 @@ ifeq ($(arch),mac-m1)
   FFLAGS  = -O2 -ffast-math -D_INFO -cpp
   NCLIB   = -L/opt/homebrew/lib
   NCINC   = -I/opt/homebrew/include
-  NETCDF  = -lnetcdf -lnetcdff
+  NETCDF  = -lnetcdf -lnetcdff -lhdf5 -lhdf5_hl -lz
 
   ifeq ($(debug),true)
     FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
