--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -56,7 +56,7 @@ ifeq ($(arch),mac-m1)
   FFLAGS  = -O2 -ffast-math -fopenmp -cpp
   NCLIB   = -L/opt/homebrew/lib
   NCINC   = -I/opt/homebrew/include
-  NETCDF  = -lnetcdff -lnetcdf
+  NETCDF  = -lnetcdff -lnetcdf -lhdf5 -lhdf5_hl -lz
 
   ifeq ($(debug),true)
     FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
