sac-tar output implemented to SH

--- a/src/swpc_sh/makefile
+++ b/src/swpc_sh/makefile
@@ -53,7 +53,6 @@ s_vmodel1r = m_vmodel_uni_rmed.f90
 s_vmodel2r = m_vmodel_grd_rmed.f90
 s_vmodel3r = m_vmodel_lhm_rmed.f90
 s_vmodel4r = m_vmodel_lgm_rmed.f90
-s_version  = m_version.f90
 
 ## common library modules
 s_system  = m_system.f90
@@ -68,6 +67,8 @@ s_readini = m_readini.f90
 s_geomap  = m_geomap.f90
 s_pdebug  = m_pdebug.f90
 s_rdrmed  = m_rdrmed.f90
+s_version = m_version.f90
+s_tar     = m_tar.f90
 
 ## main program
 s_main      = main.f90
@@ -90,6 +91,7 @@ o_readini = $(s_readini:.f90=.o)
 o_geomap  = $(s_geomap:.f90=.o)
 o_rdrmed  = $(s_rdrmed:.f90=.o)
 o_version = $(s_version:.f90=.o)
+o_tar     = $(s_tar:.f90=.o)
 
 o_global  = $(s_global:.f90=.o)
 o_kernel  = $(s_kernel:.f90=.o)
@@ -121,17 +123,18 @@ $(o_getopt):  $(s_getopt)  $(o_std) $(o_system)
 $(o_system):  $(s_system)  $(o_std)
 $(o_pdebug):  $(s_pdebug)  $(o_std)
 $(o_pwatch):  $(s_pwatch)  $(o_std)
-$(o_gk):      $(s_gk)    $(o_std)
+$(o_gk):      $(s_gk)      $(o_std)
 $(o_bicubic): $(s_bicubic) $(o_std)
 $(o_daytim):  $(s_daytim)  $(o_std)
-$(o_sac):    $(s_sac)     $(o_std) 
+$(o_sac):     $(s_sac)     $(o_std) 
 $(o_readini): $(s_readini) $(o_std) $(o_system) $(o_pdebug)
 $(o_geomap):  $(s_geomap)  $(o_std) $(o_gk)
 $(o_rdrmed):  $(s_rdrmed)  $(o_std) $(o_pdebug)
 $(o_version): $(s_version) 
+$(o_tar):     $(s_tar)    
 
 $(o_snap):  $(s_snap)  $(o_std) $(o_global) $(o_pwatch) $(o_fdtool) $(o_readini) $(o_geomap) $(o_pdebug)
-$(o_wav):     $(s_wav)     $(o_std) $(o_global) $(o_pwatch) $(o_readini) $(o_geomap) $(o_pdebug) $(o_sac)
+$(o_wav):     $(s_wav)     $(o_std) $(o_global) $(o_pwatch) $(o_readini) $(o_geomap) $(o_pdebug) $(o_sac) $(o_tar)
 $(o_global):  $(s_global)  $(o_std) $(o_fdtool) $(o_pwatch) $(o_pwatch) $(o_daytim) $(o_readini) $(o_pdebug)
 $(o_fdtool):  $(s_fdtool)  $(o_std) $(o_pdebug)
 $(o_source):  $(s_source)  $(o_std) $(o_global) $(o_fdtool) $(o_pwatch) $(o_readini) $(o_geomap) $(o_pdebug)
@@ -163,11 +166,11 @@ $(o_vmodel4r): $(s_vmodel4r) $(o_std) $(o_global) $(o_readini)  $(o_pdebug) $(o_
 ## Targets
 ##
 
-../../bin/swpc_sh.x: $(s_main) $(o_std) $(o_system) $(o_fdtool) $(o_global) $(o_kernel) $(o_getopt) $(o_source) $(o_medium) $(o_report) $(o_pwatch) $(o_snap) $(o_absorb)  $(o_gk) $(o_bicubic) $(o_daytim) $(o_sac) $(o_readini) $(o_geomap) $(o_absorb_p) $(o_absorb_c) $(o_vmodel1) $(o_vmodel2) $(o_vmodel3)  $(o_pdebug) $(o_rdrmed) $(o_vmodel1r) $(o_rdrmed) $(o_vmodel3r) $(o_vmodel2r) $(o_vmodel0) $(o_version) $(o_wav) $(o_vmodel4) $(o_vmodel4r)
+../../bin/swpc_sh.x: $(s_main) $(o_std) $(o_system) $(o_fdtool) $(o_global) $(o_kernel) $(o_getopt) $(o_source) $(o_medium) $(o_report) $(o_pwatch) $(o_snap) $(o_absorb)  $(o_gk) $(o_bicubic) $(o_daytim) $(o_sac) $(o_readini) $(o_geomap) $(o_absorb_p) $(o_absorb_c) $(o_vmodel1) $(o_vmodel2) $(o_vmodel3)  $(o_pdebug) $(o_rdrmed) $(o_vmodel1r) $(o_rdrmed) $(o_vmodel3r) $(o_vmodel2r) $(o_vmodel0) $(o_version) $(o_wav) $(o_vmodel4) $(o_vmodel4r) $(o_tar)
 	$(FC) $(NCINC)  $(NCLIB)  $(FFLAGS) -o $@ $^ $(NETCDF)
 
 clean:
-	/bin/rm -f $(o_std) $(o_system) $(o_fdtool) $(o_global) $(o_kernel) $(o_getopt) $(o_source) $(o_medium) $(o_report) $(o_pwatch) $(o_snap) $(o_absorb) $(o_gk) $(o_bicubic) $(o_daytim) $(o_sac) $(o_readini) $(o_geomap)  $(o_absorb_p) $(o_absorb_c) $(o_vmodel1) $(o_vmodel2) $(o_vmodel3) $(o_pdebug) $(o_rdrmed) $(o_vmodel1r) $(o_rdrmed) $(o_vmodel3r) $(o_vmodel2r)  $(o_vmodel0) $(o_version) $(o_wav) $(o_vmodel4) $(o_vmodel4r) ../../bin/swpc_sh.x
+	/bin/rm -f $(o_std) $(o_system) $(o_fdtool) $(o_global) $(o_kernel) $(o_getopt) $(o_source) $(o_medium) $(o_report) $(o_pwatch) $(o_snap) $(o_absorb) $(o_gk) $(o_bicubic) $(o_daytim) $(o_sac) $(o_readini) $(o_geomap)  $(o_absorb_p) $(o_absorb_c) $(o_vmodel1) $(o_vmodel2) $(o_vmodel3) $(o_pdebug) $(o_rdrmed) $(o_vmodel1r) $(o_rdrmed) $(o_vmodel3r) $(o_vmodel2r)  $(o_vmodel0) $(o_version) $(o_wav) $(o_vmodel4) $(o_vmodel4r) $(o_tar) ../../bin/swpc_sh.x
 	/bin/rm -f *.mod
 	/bin/rm -f *~
 	/bin/rm -f *.L
