--- a/src/swpc_sh/makefile
+++ b/src/swpc_sh/makefile
@@ -126,7 +126,7 @@ $(o_pwatch):  $(s_pwatch)  $(o_std)
 $(o_gk):      $(s_gk)      $(o_std)
 $(o_bicubic): $(s_bicubic) $(o_std)
 $(o_daytim):  $(s_daytim)  $(o_std)
-$(o_sac):     $(s_sac)     $(o_std) 
+$(o_sac):     $(s_sac)     $(o_std) $(o_tar)
 $(o_readini): $(s_readini) $(o_std) $(o_system) $(o_pdebug)
 $(o_geomap):  $(s_geomap)  $(o_std) $(o_gk)
 $(o_rdrmed):  $(s_rdrmed)  $(o_std) $(o_pdebug)
