Timestamp is stored in UT instead of local time

--- a/src/swpc_psv/makefile
+++ b/src/swpc_psv/makefile
@@ -125,7 +125,7 @@ $(o_system):   $(s_system)   $(o_std) $(o_pdebug)
 $(o_pwatch):   $(s_pwatch)   $(o_std) $(o_pdebug)
 $(o_gk):       $(s_gk)       $(o_std) $(o_pdebug)
 $(o_bicubic):  $(s_bicubic)  $(o_std) $(o_pdebug)
-$(o_daytim):   $(s_daytim)   $(o_std) $(o_pdebug)
+$(o_daytim):   $(s_daytim)
 $(o_sac):      $(s_sac)      $(o_std)  $(o_tar)
 $(o_readini):  $(s_readini)  $(o_std) $(o_system) $(o_pdebug)
 $(o_geomap):   $(s_geomap)   $(o_std) $(o_gk) $(o_pdebug)
