--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -67,6 +67,29 @@ ifeq ($(arch),mac-m1)
 
 endif
 
+#### EIC @ ERI, UTokyo (2025 System) with Intel Compiler (Job Classes L,M,N)
+## Intel Compiler (recommended)
+ifeq ($(arch), eic2025)
+  FC     = module purge; module load PrgEnv-intel HDF5/1.14.5/intel/2024.2.1 NetCDF/4.9.2/intel/2024.2.1; CRAY_CPU_TARGET=x86-64 ftn
+  FFLAGS = -O2 -fpp -qopenmp
+  NCLIB  = 
+  NCINC  = 
+  NETCDF = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
+endif
+
+## For CRAY's environment (not recommended)
+ifeq ($(arch), eic2025-cray)
+  FC     = module purge; module load PrgEnv-cray HDF5/1.14.5/cray/18.0.1 NetCDF/4.9.2/cray/18.0.1; CRAY_CPU_TARGET=x86-64 ftn 
+  FFLAGS = -O3 -fopenmp -eZ
+  NCLIB  = -L/home/app/local/NetCDF/4.9.2/cray/18.0.1/lib
+  NCINC  = -I/home/app/local/NetCDF/4.9.2/cray/18.0.1/include
+  NETCDF = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
+endif
+
+###
+### Obsolete systems
+###
+
 ## EIC @ ERI,U-TOKYO (2020 System)
 ifeq ($(arch),eic)
   FC      = module purge; module load intel mpt lib/NetCDF lib/HDF5; ifort
@@ -76,10 +99,6 @@ ifeq ($(arch),eic)
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
 endif
 
-
-###
-### Obsolete systems
-###
 
 ## Earth Simulator 3 (Use fortran 90 compiler for better speed) (obsolete)
 ifeq ($(arch),es3)
