Changes to strictly follow Fortran2018 standard

--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -53,7 +53,7 @@ endif
 ifeq ($(arch),mac-m1)
 
   FC      = mpif90
-  FFLAGS  = -O2 -ffast-math -fopenmp -cpp
+  FFLAGS  = -O2 -ffast-math -fopenmp -cpp -std=f2018 -Werror=line-truncation
   NCLIB   = -L/opt/homebrew/lib
   NCINC   = -I/opt/homebrew/include
   NETCDF  = -lnetcdff -lnetcdf -lhdf5 -lhdf5_hl -lz
@@ -61,8 +61,8 @@ ifeq ($(arch),mac-m1)
   ifeq ($(debug),true)
     FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
               -Wno-conversion -ffixed-line-length-132 \
-	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
-	          -D_DEBUG -cpp
+	            -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
+	            -D_DEBUG -cpp -std=f2018
   endif
 
 endif
@@ -147,7 +147,7 @@ endif
 ifeq ($(arch),mac-gfortran)
   LOCAL  = /usr/local
   FC      = mpif90
-  FFLAGS  = -O2 -ffast-math   -fopenmp
+  FFLAGS  = -O2 -ffast-math -fopenmp
   NCLIB   = -L$(LOCAL)/lib
   NCINC   = -I$(LOCAL)/include
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
@@ -155,7 +155,7 @@ ifeq ($(arch),mac-gfortran)
   ifeq ($(debug),true)
     FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
 	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
-	           -D_DEBUG 
+	          -D_DEBUG 
   endif
 
 endif
