--- a/src/shared/makefile-tools.arch
+++ b/src/shared/makefile-tools.arch
@@ -45,7 +45,7 @@ endif
 ifeq ($(arch),mac-m1)
 
   FC      = gfortran
-  FFLAGS  = -O2 -ffast-math -D_INFO -cpp
+  FFLAGS  = -O2 -ffast-math -D_INFO -cpp -std=f2018 
   NCLIB   = -L/opt/homebrew/lib
   NCINC   = -I/opt/homebrew/include
   NETCDF  = -lnetcdf -lnetcdff -lhdf5 -lhdf5_hl -lz
@@ -54,7 +54,7 @@ ifeq ($(arch),mac-m1)
     FFLAGS  = -Wall -pedantic -fbounds-check -O -Wuninitialized \
               -Wno-conversion -ffixed-line-length-132 \
 	          -ffpe-trap=invalid,zero,overflow -fbacktrace -O0 \
-	          -D_INFO -D_DEBUG -cpp
+	          -D_INFO -D_DEBUG -cpp -std=f2018 
   endif
 endif
 
